--- a/app/landing/landing.css
+++ b/app/landing/landing.css
@@ -3,6 +3,7 @@
 *{
     margin: 0;
     padding: 0;
+    font-family: "Open Sans", serif;
 }
 
 html{
@@ -129,4 +130,12 @@ header a:hover{
     justify-content: center;
     flex-direction: column;
     align-items: center;
+}
+
+footer{
+    display: flex;
+    
+}
+footer ul{
+    list-style: none;
 }
