--- a/app/categorias/categorias.css
+++ b/app/categorias/categorias.css
@@ -1,13 +1,13 @@
 @import url('https://fonts.googleapis.com/css2?family=Open+Sans:ital,wght@0,300..800;1,300..800&display=swap');
 
-#paginalogin * {
+#categorias * {
     margin: 0;
     padding: 0;
     box-sizing: border-box;
     font-family: "Open Sans", serif;
 }
 
-#paginalogin body {
+#categorias body {
     background: #B3D0B3;
     color: #FFF;
     display: flex;
@@ -16,40 +16,40 @@
     min-height: 100vh;
 }
 
-#paginalogin .login {
+#categorias .categorias {
     background: #89B789;
     width: 80%;
     max-width: 550px;
-    padding: 4%;
+    padding: 3%;
     border-radius: 60px;
     box-shadow: 20px 20px 10px #444;
 }
 
-#paginalogin .login h1 {
-    margin-top: 5%;
-    margin-bottom: 15%;
-    color: #FFF;
+#categorias .categorias h1 {
     text-align: center;
-    font-size: 40px;
+    margin-top: 2%;
+    margin-bottom: 10%;
+    color: #FFF;
+    font-size: 30px;
     font-weight: 600;
 }
 
-#paginalogin .login input {
+#categorias .categorias input {
     width: 100%;
-    padding: 5%;
+    padding: 4%;
     margin-top: 1%;
-    margin-bottom: 10%;
+    margin-bottom: 8%;
     border: none;
     border-radius: 5px;
     background: #5F805F;
     color: #FFF;
 }
 
-#paginalogin .login input::placeholder {
+#categorias .categorias input::placeholder {
     color: #D3D3D3;
 }
 
-#paginalogin .login button {
+#categorias .categorias button {
     width: 100%;
     padding: 5%;
     border: none;
@@ -57,21 +57,12 @@
     background: #5F805F;
     color: #FFF;
     margin-top: 5%;
+    margin-bottom: 2%;
 
     cursor: pointer;
     transition: background-color 0.3s ease;
 }
 
-#paginalogin .login button:hover {
-    background-color: #a6cfa6;
-}
-
-#paginalogin p {
-    text-align: center;
-    margin-bottom: 10%;
-    margin-top: 5%;
-}
-
-#paginalogin a {
-    color: #FFF;
+#categorias .categorias button:hover {
+    background-color: #a6cfa6; 
 }
