--- a/app/categorias/categorias.css
+++ b/app/categorias/categorias.css
@@ -1,13 +1,13 @@
 @import url('https://fonts.googleapis.com/css2?family=Open+Sans:ital,wght@0,300..800;1,300..800&display=swap');
 
-#categorias * {
+.categorias * {
     margin: 0;
     padding: 0;
     box-sizing: border-box;
     font-family: "Open Sans", serif;
 }
 
-#categorias body {
+body {
     background: #B3D0B3;
     color: #FFF;
     display: flex;
@@ -16,7 +16,7 @@
     min-height: 100vh;
 }
 
-#categorias .categorias {
+.categorias {
     background: #89B789;
     width: 80%;
     max-width: 550px;
@@ -25,7 +25,7 @@
     box-shadow: 20px 20px 10px #444;
 }
 
-#categorias .categorias h1 {
+.categorias h1 {
     text-align: center;
     margin-top: 2%;
     margin-bottom: 10%;
@@ -34,7 +34,7 @@
     font-weight: 600;
 }
 
-#categorias .categorias input {
+.categorias input {
     width: 100%;
     padding: 4%;
     margin-top: 1%;
@@ -45,11 +45,11 @@
     color: #FFF;
 }
 
-#categorias .categorias input::placeholder {
+.categorias input::placeholder {
     color: #D3D3D3;
 }
 
-#categorias .categorias button {
+.categorias button {
     width: 100%;
     padding: 5%;
     border: none;
@@ -63,6 +63,6 @@
     transition: background-color 0.3s ease;
 }
 
-#categorias .categorias button:hover {
+.categorias button:hover {
     background-color: #a6cfa6; 
 }
