--- a/app/cadastro_itens/cadastro_itens.css
+++ b/app/cadastro_itens/cadastro_itens.css
@@ -18,6 +18,7 @@ body {
 
 .cadastro_produtos {
     background: #89B789;
+    margin: 4%;
     width: 80%;
     max-width: 550px;
     padding: 3.5%;
